<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Android Base Project</string>
    <string name="save_conversation">Save</string>
    <string name="warning">Warning</string>
    <string name="confirm">Confirm</string>
    <string name="check_ur_connection">Please check your internet connection</string>
    <string name="download_failed">Download failed!</string>
    <string name="cannot_find_messenger_app">Cannot find Messenger App!</string>
    <string name="err">Error</string>
    <string name="err_unknown">Lỗi không xác định, xin vui lòng thử lại sau.</string>
    <string name="err_unknown_en">Unknown error, please try again later.</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="needs_per"> needs following permissions to continue</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="per_manually_msg">You need to allow necessary permissions in Settings manually</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="fast_forward">Fast forward</string>
    <string name="fast_rewind">Fast rewind</string>
    <string name="minimize">Minimize</string>
    <string name="ad_tag_url"><![CDATA[https://pubads.g.doubleclick.net/gampad/ads?sz=640x480&iu=/124319096/external/single_ad_samples&ciu_szs=300x250&impl=s&gdfp_req=1&env=vp&output=vast&unviewed_position_start=1&cust_params=deployment%3Ddevsite%26sample_ct%3Dlinear&correlator=]]></string>
    <string name="policy">Điều khoản sử dụng ứng dụng, chính sách bảo mật và quyền riêng tư</string>
    <string name="policy_en">Terms and Privacy Policy</string>
    <string name="copyright">©Roy93Group</string>
    <string name="copyright_team">© Múp\'s Team</string>
    <string name="rate_app">Đánh giá</string>
    <string name="rate_app_en">Rate app</string>
    <string name="more_app">Thêm ứng dụng hay</string>
    <string name="more_app_en">More apps</string>
    <string name="why_u_see_ad">Tại sao bạn nhìn thấy quảng cáo?</string>
    <string name="why_u_see_ad_en">Why did you see ad?</string>
    <string name="share_app">Chia sẻ ứng dụng</string>
    <string name="share_app_en">Share app</string>
    <string name="like_facebook_fan_page">Like Facebook Fanpage</string>
    <string name="support_24_7">Hỗ trợ trực tiếp 24/7</string>
    <string name="support_24_7_en">Support 24/7</string>
    <string name="loading">Loading…</string>
    <string name="open_gift">Open gift</string>
    <string name="no_data">Không có dữ liệu</string>
    <string name="no_data_eng">No data</string>
    <string name="video_not_found">Không tìm thấy video này</string>
    <string name="lgallery">LGallery</string>
    <string name="drag_me_here">Drag me here</string>
    <string name="large_dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="app_name_girl">CUTE HOLE</string>
    <string name="app_name_comic">TruyenTranhTuan</string>
    <string name="app_name_comic_ttt">iComic</string>
    <string name="app_name_find_number">Find Number</string>
    <string name="menu_home">Home</string>
    <string name="menu_favourite">Favourite</string>
    <string name="menu_infor">Information</string>
    <string name="menu_profile">Profile</string>
    <string name="today_s">Today\'s</string>
    <string name="hottest_shot">Hottest shot</string>
    <string name="album">Album</string>
    <string name="top_user">Top user</string>
    <string name="video">Video</string>
    <string name="search">Search…</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="touch_anywhere_to_hide">Swipe left/right to another page\nTouch anywhere to hide.</string>
    <string name="chat_with_dev">Chat with dev</string>
    <string name="donation">Donation</string>
    <string name="go_to_settings">Vào cài đặt</string>
    <string name="need_permissions">Cấp quyền truy cập</string>
    <string name="need_permission_msg">Vui lòng cấp quyền để có thể sử dụng ứng dụng.</string>
    <string name="need_permission_msg_setting">Vui lòng cấp quyền để có thể sử dụng ứng dụng. Vui lòng chọn cài đặt.</string>
    <string name="home">Trang chủ</string>
    <string name="favourite">Yêu thích</string>
    <string name="profile">Cá nhân</string>
    <string name="setting_vn">Cài đặt</string>
    <string name="information_vn">Thông tin</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="dark_theme_vn">Chủ đề tối</string>
    <string name="support_me">Support me</string>
    <string name="warning_vn">Thông báo</string>
    <string name="app_will_be_restarted_vn">Ứng dụng sẽ được khởi động lại.</string>
    <string name="all_vn">Tất cả</string>
    <string name="category_vn">Thể loại</string>
    <string name="search_in_category">Đang tìm kiếm ở thể loại</string>
    <string name="coming_soon">Coming soon</string>
    <string name="next_chap">Next chap</string>
    <string name="prev_chap">Previous chap</string>
    <string name="comment">Bình luận</string>
    <string name="download_photo">Tải ảnh về</string>
    <string name="_5">5</string>
    <string name="single_player">Single player</string>
    <string name="two_players">Two players</string>
    <string name="levels">Levels</string>
    <string name="full_screen_fab_transition">Full Screen FAB Transition</string>
    <string name="click">Click</string>
</resources>