<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.github.mmin18.widget.RealtimeBlurView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvHottestShot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:realtimeBlurRadius="@dimen/round_5"
        app:realtimeOverlayColor="@color/black35" />

    <TextView
        android:id="@+id/tvToday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/today_s"
        android:textColor="@color/black"
        android:textSize="@dimen/txt_30"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHottestShot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hottest_shot"
        android:textColor="@color/gray"
        android:textSize="@dimen/txt_medium"
        app:layout_constraintStart_toStartOf="@+id/tvToday"
        app:layout_constraintTop_toBottomOf="@+id/tvToday" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:contentDescription="@string/app_name"
        android:foreground="?selectableItemBackgroundBorderless"
        android:src="@drawable/ic_search_black_48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute" />

    <androidx.recyclerview.widget.RecyclerView
        style="@style/ScrollVertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
