<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/themeBackgroundColorMedium">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBkg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCopyright"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:padding="@dimen/padding_medium"
                android:text="@string/copyright_team"
                android:textColor="?attr/themeTextColor"
                android:textSize="@dimen/txt_medium" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvCopyright"
                android:gravity="center"
                android:padding="@dimen/padding_medium"
                android:text="@string/app_name_comic"
                android:textColor="?attr/themeTextColor"
                android:textSize="@dimen/txt_50" />

            <com.wang.avi.AVLoadingIndicatorView
                android:id="@+id/indicatorView"
                style="@style/AVLoadingIndicatorView"
                android:layout_width="@dimen/w_40"
                android:layout_height="@dimen/w_40"
                android:layout_centerInParent="true"
                app:indicatorColor="?attr/themeTextColor"
                app:indicatorName="BallClipRotatePulseIndicator" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/lnAdView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical" />
</RelativeLayout>
