<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_bkg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop" />

    <!--<com.views.realtimeblurview.RealtimeBlurView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:realtimeBlurRadius="@dimen/round_5"
        app:realtimeOverlayColor="@color/black_35" />-->

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ln_adview"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_copyright"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_55"
                android:gravity="center"
                android:text="@string/copyright"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_14" />

            <com.wang.avi.AVLoadingIndicatorView
                android:id="@+id/indicatorView"
                style="@style/AVLoadingIndicatorView"
                android:layout_width="@dimen/w_40"
                android:layout_height="@dimen/w_40"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin_55"
                app:indicatorColor="@color/white"
                app:indicatorName="LineScalePulseOutRapidIndicator" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:padding="@dimen/padding_5"
                android:text="@string/lgallery"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_50" />
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/ln_adview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical" />
</RelativeLayout>
